--- a/style.css
+++ b/style.css
@@ -1,3 +1,28 @@
+@media (max-width:680px){
+    .box-top-parts{
+       flex-direction: column;
+    }
+}
+
+@media (min-width:680px){
+    .box-top-parts{
+       flex-direction: row;
+    }
+}
+
+@media (max-width:600px){
+    .box-top-parts{
+        padding: 10px;
+    }
+}
+
+@media (max-width:680px){
+    .box-bottom{
+        flex-direction: row;
+        height: calc(100% - 300px);
+    }
+}
+
 *{
     margin: 0;
     padding: 0;
